# CodingChallenge2024

./: README.md  pyproject.toml
P1/: README.md  input.txt  input2.txt  main.py  output.txt
P2/: README.md  main.py  output.txt
P3/: README.md  input.txt
benchmark/: benchmark.py  clean_compilation.sh  clean_outputs.sh  generate_copy.py  linting.py  run.py  run_benchmark.sh  run_sol.py
equipes/Mehdi_Ghannem/P0/: README.md
equipes/Mehdi_Ghannem/P1/: main.py
equipes/Mehdi_Ghannem/P2/: main.py
equipes/Mehdi_Ghannem/P3/: main.py  output.txt
equipes/amila_team/: P1.py  P2.py  output_p1_AM.txt  output_p2_AM.txt
equipes/andres_team/: P1.py
equipes/maroua_team/: P1.py  P1.r  P2.py  P2.r  P3.py
equipes/maxime_team/: P1.py  P2.py
equipes/maxime_team/P1/: P1.py
equipes/maxime_team/P1/ResultatsP1/: output.txt
equipes/maxime_team/P2/: P2.py
equipes/maxime_team/P2/ResultatsP2/: output.txt
equipes/mehdi_team/P0/: README.md
equipes/mehdi_team/P1/: README.md  input.txt  input2.txt  main.py  output.txt
equipes/mehdi_team/P2/: README.md  input.txt  main.py  output.txt
equipes/mehdi_team/P3/: README.md  input.txt  main.py  output.txt
solutions/P1/: case_generator.py  solution.txt  solution2.txt  solve.cpp  solve.rs
solutions/P2/: case_generator.py  input.txt  solution.txt  solve.cpp  solve.rs
solutions/P3/: case_generator.py  input.txt  solve.cpp
solutions/data/P3/: input.txt
