[tool.poetry]
name = "codechallenge"
version = "0.1.0"
description = ""
authors = ["Andres Ladino <andres.ladino@ratp.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
rich = "^13.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
